// Copyright (c) 2022, KarmaCoin Authors. a@karmaco.in.
// This work is licensed under the KarmaCoin v0.1.0 license published in the LICENSE file of this repo.
//

syntax = "proto3";
package karma_coin.verifier;

// mobile phone numbers verifier api service
service VerifierService {

  // Send verification code to the user's mobile number via whatsapp
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (SendVerificationCodeResponse);

  /// Verify number using verification provider code
  rpc VerifyNumber(VerifyNumberRequest) returns (VerifyNumberResponse);
}

message SendVerificationCodeRequest {
  string mobile_number = 1;
}

message SendVerificationCodeResponse {
  SendVerificationCodeResult result = 1;
  string session_id = 2;
  string error_message = 3;
}

message VerifyNumberRequest {
  // protobuf serialized VerifyNumberRequestData
  bytes data = 1;

  // User signature of binary data field 1
  // Public key is account_id in the data
  bytes signature = 2;
}

message VerifyNumberResponse {
  // serialized SIGNED UserVerificationData. This data should be scale and not protobuf encoded
  bytes data = 1;
  // verification result for client feedback
  VerificationResult result = 3;
}

enum SendVerificationCodeResult {
  SEND_VERIFICATION_CODE_RESULT_UNSPECIFIED = 0;
  SEND_VERIFICATION_CODE_RESULT_SENT = 1;
  SEND_VERIFICATION_CODE_RESULT_FAILED = 2;
  SEND_VERIFICATION_CODE_RESULT_INVALID_USER_DATA =3;
}
enum VerificationResult {
  VERIFICATION_RESULT_UNSPECIFIED = 0;
  VERIFICATION_RESULT_VERIFIED = 2; // user is verified using provided token
  VERIFICATION_RESULT_MISSING_DATA = 4; // request is missing required data
  VERIFICATION_RESULT_FAILED = 5;
  VERIFICATION_RESULT_INVALID_SIGNATURE = 6; // bad client signature
}

// Created and signed by a verifier to attest that an account owns a mobile number
// Includes mobile number hash instead of mobile number in response
// Signature is externally available
// todo: this should be scale encoded
message UserVerificationData {
  string verifier_account_id = 1;
  uint64 timestamp = 2;
  string account_id = 3;
  string phone_number_hash = 4;
  string user_name = 5;
  string signature = 6;
}

message VerifyNumberRequestData {
  uint64 timestamp = 1;
  string account_id = 2;
  string phone_number = 3;
  string user_name = 4;
  // optional token to bypass verification
  string bypass_token = 5;
  // Auth provider verification code
  string verification_code = 6;
  // Verification session id
  string verification_sid = 7;
}

